eks-gitops-quiz-app/k8s/database-service.yaml
# ExternalName service pointing to RDS endpoint
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: 3-tier-app-eks
  labels:
    app.kubernetes.io/managed-by: pushparaj
spec:
  type: ExternalName
  externalName: your-rds-endpoint.region.rds.amazonaws.com  # Replace with terraform output
